--- a/src/pages/course_detail/course_detail.less
+++ b/src/pages/course_detail/course_detail.less
@@ -1,30 +1,78 @@
-html{
+html {
     height: 100%;
-    body{
-        height: 100%;
-        display: flex;
+
+    body {
+        height        : 100%;
+        display       : flex;
         flex-direction: column;
-        .top{
-            height: 1px;
-            flex-grow: 1;
+
+        .top {
+            height          : 1px;
+            flex-grow       : 1;
             background-color: #000;
-            video{
-                width: 100%;
-                height: 250px;
+
+            video {
+                width           : 100%;
+                height          : 250px;
                 background-color: rgb(24, 111, 187);
-                position: absolute;
-                top: 50%;
-                transform: translateY(-60%);
+                position        : absolute;
+                top             : 50%;
+                transform       : translateY(-70%);
             }
+
+            p {
+                text-indent: 10px;
+            }
+
+            .mes {
+                color    : #fff;
+                font-size: 40px;
+                position : absolute;
+                top      : 70%;
+            }
+
+            #title {
+                color     : #fff;
+                font-size : 20px;
+                position  : absolute;
+                top       : 75%;
+                margin-top: 15px;
+            }
+
         }
-        .menu{
-            height:80px;
-            display: flex;
+
+        .menu {
+            height         : 80px;
+            display        : flex;
             justify-content: space-around;
-            align-items: center;
-            span{
+            align-items    : center;
+
+            span {
                 font-size: 50px;
             }
         }
+
+        .box {
+            position        : fixed;
+            height          : 100%;
+            width           : 100%;
+            top             : 0;
+            left            : 0;
+            background-color: rgba(36, 31, 31, 0.6);
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            display: none;
+            div{
+                background-color: rgba(2, 225, 50, 0.892);
+                width: 100px;
+                height: 100px;
+                border-radius: 50px;
+                text-align: center;
+                line-height: 100px;
+                color: #fff;
+            }
+        }
+
     }
 }
