--- a/src/pages/motion/motion.less
+++ b/src/pages/motion/motion.less
@@ -72,77 +72,102 @@ body {
         flex-grow: 1;
         position : relative;
 
-        .run-type {
-            display        : flex;
-            justify-content: space-evenly;
+        #container {
+            position: absolute;
+            width   : 100%;
+            height  : 100%;
 
-            span {
-                display         : inline-block;
-                color           : #fff;
-                height          : 40px;
-                width           : 150px;
-                line-height     : 40px;
-                background-color: #9CBCE2;
-                text-align      : center;
-                margin          : 30px 10px;
-                border-radius   : 20px;
-                font-size       : 18px;
+            .amap-copyright {
+                display: none !important;
+            }
 
-                &.on {
-                    background-color: #4294ff;
+            .amap-logo {
+                display: none !important;
+            }
+        }
+
+        .position {
+            position: absolute;
+            width   : 100%;
+            height  : 100%;
+
+            .run-type {
+                display        : flex;
+                justify-content: space-evenly;
+                width          : 100%;
+
+                span {
+                    display         : inline-block;
+                    color           : #fff;
+                    height          : 40px;
+                    width           : 30%;
+                    line-height     : 40px;
+                    background-color: #9CBCE2;
+                    text-align      : center;
+                    margin          : 30px 10px;
+                    border-radius   : 20px;
+                    font-size       : 18px;
+
+                    &.on {
+                        background-color: #4294ff;
+                    }
                 }
             }
-        }
 
-        .go {
-            width           : 150px;
-            height          : 150px;
-            border-radius   : 75px;
-            background-color: rgba(22, 211, 28, 0.6);
-            text-align      : center;
-            line-height     : 150px;
-            font-size       : 60px;
-            font-weight     : bolder;
-            color           : #1592CC;
-            position        : absolute;
-            top             : 50%;
-            left            : 50%;
-            transform       : translate(-50%, -50%);
-        }
-
-        .function {
-            position       : absolute;
-            bottom         : 50px;
-            display        : flex;
-            justify-content: space-evenly;
-            width          : 100%;
-
-            span {
-                display         : block;
-                background-color: #eee;
-                font-size       : 25px;
-                height          : 40px;
-                width           : 40px;
-                border-radius   : 20px;
+            .go {
+                width           : 150px;
+                height          : 150px;
+                border-radius   : 75px;
+                background-color: rgba(22, 211, 28, 0.4);
                 text-align      : center;
-                line-height     : 40px;
+                line-height     : 150px;
+                font-size       : 60px;
+                font-weight     : bolder;
+                color           : #1592CC;
+                position        : absolute;
+                top             : 50%;
+                left            : 50%;
+                transform       : translate(-50%, -50%);
             }
 
-            .target {
-                background-color: #4294ff;
-                display         : block;
-                color           : #fff;
-                font-size       : 16px;
-                font-weight     : bold;
-                height          : 40px;
-                width           : 110px;
-                border-radius   : 20px;
-                text-align      : center;
-                line-height     : 40px;
-                align-self      : center;
-            }
+            .function {
+                position       : absolute;
+                bottom         : 50px;
+                display        : flex;
+                justify-content: space-evenly;
+                width          : 100%;
 
+                span {
+                    display         : block;
+                    background-color: #eee;
+                    font-size       : 25px;
+                    height          : 40px;
+                    width           : 40px;
+                    border-radius   : 20px;
+                    text-align      : center;
+                    line-height     : 40px;
+                }
+
+                .target {
+                    background-color: #4294ff;
+                    display         : block;
+                    color           : #fff;
+                    font-size       : 16px;
+                    font-weight     : bold;
+                    height          : 40px;
+                    width           : 110px;
+                    border-radius   : 20px;
+                    text-align      : center;
+                    line-height     : 40px;
+                    align-self      : center;
+                }
+
+            }
         }
+
+
+
+
     }
 
     .route {
@@ -195,7 +220,7 @@ body {
         width     : 15%;
         text-align: center;
         margin    : 6px 10px;
-        color: #333;
+        color     : #333;
 
         &.on {
             color      : deepskyblue;
