--- a/src/pages/riding/riding.less
+++ b/src/pages/riding/riding.less
@@ -60,7 +60,7 @@ html,body{
         }
     }
    
-    .map{
+   /*  .map{
         flex-grow: 1;
         position: relative;
         .run-type{
@@ -129,8 +129,109 @@ html,body{
             }
             
         }
-    }
+    } */
 
+    .map {
+        flex-grow: 1;
+        position : relative;
+
+        #container {
+            position: absolute;
+            width   : 100%;
+            height  : 100%;
+
+            .amap-copyright {
+                display: none !important;
+            }
+
+            .amap-logo {
+                display: none !important;
+            }
+        }
+
+        .position {
+            position: absolute;
+            width   : 100%;
+            height  : 100%;
+
+            .run-type {
+                display        : flex;
+                justify-content: space-evenly;
+                width          : 100%;
+
+                span {
+                    display         : inline-block;
+                    color           : #fff;
+                    height          : 40px;
+                    width           : 30%;
+                    line-height     : 40px;
+                    background-color: #9CBCE2;
+                    text-align      : center;
+                    margin          : 30px 10px;
+                    border-radius   : 20px;
+                    font-size       : 18px;
+
+                    &.on {
+                        background-color: #4294ff;
+                    }
+                }
+            }
+
+            .go {
+                width           : 150px;
+                height          : 150px;
+                border-radius   : 75px;
+                background-color: rgba(22, 211, 28, 0.4);
+                text-align      : center;
+                line-height     : 150px;
+                font-size       : 60px;
+                font-weight     : bolder;
+                color           : #1592CC;
+                position        : absolute;
+                top             : 50%;
+                left            : 50%;
+                transform       : translate(-50%, -50%);
+            }
+
+            .function {
+                position       : absolute;
+                bottom         : 50px;
+                display        : flex;
+                justify-content: space-evenly;
+                width          : 100%;
+
+                span {
+                    display         : block;
+                    background-color: rgba(29, 231, 32.3,.6);
+                    font-size       : 25px;
+                    height          : 40px;
+                    width           : 40px;
+                    border-radius   : 20px;
+                    text-align      : center;
+                    line-height     : 40px;
+                }
+
+                .target {
+                    background-color: #4294ff;
+                    display         : block;
+                    color           : #fff;
+                    font-size       : 16px;
+                    font-weight     : bold;
+                    height          : 40px;
+                    width           : 110px;
+                    border-radius   : 20px;
+                    text-align      : center;
+                    line-height     : 40px;
+                    align-self      : center;
+                }
+
+            }
+        }
+
+
+
+
+    }
     .route{
         padding: 0 20px;
         margin-bottom: 15px;
@@ -194,5 +295,23 @@ html,body{
             display  : block;
             font-size: 14px;
         }
+    }
+}
+//模态框
+.mask{
+    display: none;
+    // display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #4294ff;
+    color: #fff;
+    .countdown{
+        font-size: 150px;
+        font-weight: bolder;
     }
 }
